# microlink

./: .gitignore  CMakePresets.json  README.md
components/microlink/: CMakeLists.txt  Kconfig
components/microlink-mode-uart/microlink/: CMakeLists.txt  Kconfig
components/microlink-mode-usb/microlink/: Kconfig
components/microlink-modem-uart/: .gitignore  CMakeLists.txt  Kconfig
components/microlink-modem-uart/docs/: LARGE_TAILNET.md
components/microlink-modem-uart/include/: ml_net_switch.h
components/microlink-modem-uart/src/: ml_at_socket.c  ml_config_httpd.c
components/microlink-modem-usb/: LICENSE  README.md  TESTING_GUIDE.md
components/microlink-modem-usb/docs/: ARCHITECTURE.md  TAILSCALE_REFERENCE.md
components/microlink-modem-usb/src/: ml_stun.c
components/microlink/components/wireguard_lwip/src/: wireguard.c
components/microlink/include/: microlink.h  microlink_internal.h  ml_at_socket.h
components/microlink/src/: ml_cellular_usb.c  ml_config_httpd.c  ml_derp.c  ml_net_switch.c  ml_noise.c  ml_wg_mgr.c  nacl_box.c
examples/: microlink_mode.cmake
examples/basic_connect/: CMakeLists.txt
examples/cellular_connect/: CMakeLists.txt
examples/cellular_heartbeat/: CMakeLists.txt
examples/failover_connect/: CMakeLists.txt
examples/rebind_test/: CMakeLists.txt
microlink-mode-uart/microlink/src/: x25519.c
microlink-mode-usb/microlink/: CMakeLists.txt
microlink-mode-usb/microlink/include/: ml_cellular.h
microlink-mode-usb/microlink/src/: ml_net_switch.c
src/: microlink_coordination.c
(+57 files in other folders)
